cleaned up day04